<resources>

    <!-- 首页 -->
    <string name="app_name">考勤助手</string>
    <string name="clock_time">打卡时间</string>
    <string name="workState">出勤类型</string>
    <string name="normal">工作日</string>
    <string name="weekJob">节假日</string>
    <string name="restAllday">全天假</string>
    <string name="clock_type">打卡类型</string>
    <string name="clock_in">上班卡</string>
    <string name="clock_out">下班卡</string>
    <string name="clock_history">打卡记录</string>
    <string name="history_tip1">全天请假!</string>
    <string name="history_tip2">暂无打卡记录!</string>
    <string name="history_tip3">上班记录</string>
    <string name="history_tip4">下班记录</string>
    <string name="save_tip1">上班时间不能晚于下班时间，请重新设置！</string>
    <string name="save_tip2">下班时间不能早于上班时间，请重新设置！</string>
    <string name="confirm">确定</string>

    <!-- 统计页 -->
    <string name="date">日期</string>
    <string name="timeBegin">上班</string>
    <string name="timeEnd">下班</string>
    <string name="workingTime">时长</string>
    <string name="workType">出勤类型</string>
    <string name="search">查询</string>
    <string name="keep">保存</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="keepResult">保存结果</string>
    <string name="msg_1">该日期已经存在，请重新设置</string>
    <string name="msg_2">成功</string>
    <string name="msg_3">数据错误</string>
    <string name="msg_4">没有数据</string>
    <string name="msg_5">结束日期在开始日期之前了</string>
    <string name="msg_6">日期间隔不能超过1个月</string>
    <string name="toolTip">提示框</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="minute">分钟</string>
    <string name="totalWorkTime">累计上班时间为</string>
    <string name="workTimeOffest">手机与打卡系统的时间偏差</string>
    <string name="details">详情</string>
    <string name="allWorkTimes">总上班时间</string>
    <string name="allRestTimes">总请假时间</string>
    <string name="averageWorkBeginTime">平均上班时间</string>
    <string name="averageWorkEndTime">平均下班时间</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后再说</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="save">保存</string>
    <string name="statistics">统计</string>
    <string name="serial_number">序号</string>
    <string name="total_work_time">累计上班时间%1$d小时%2$d分钟</string>
    <string name="total_work_over_time">累计加班时间%1$d小时%2$d分钟</string>
    <string name="statistics_from_to">统计时段%1$s~%2$s</string>

    <!-- 详情页 -->
    <string name="total_work_days">累计出勤%1$d天</string>
    <string name="total_work_days_detail">(其中工作日出勤%1$d天，节假日出勤%2$d天)</string>
    <string name="rest_all_day">全天请假%1$d天</string>
    <string name="average_begin_time">平均上班时间%1$s</string>
    <string name="average_end_time">平均下班时间%1$s</string>
    <string name="average_time_tip">(仅统计包含完整上下班打卡记录的日子,共%1$d天)</string>
    <string name="total_work_time_tip">(其中工作日%1$d小时%2$d分钟,节假日%3$d小时%4$d分钟)</string>
    <string name="total_work_over_time_tip">(计算方法:工作日%1$s以后时段和节假日全时段)</string>

    <!-- 设置页 -->
    <string name="settings">设置</string>
    <string name="settingTime">设定加班开始时间</string>
    <string name="setting_time_tip">(当前默认%1$s以后计算加班时间)</string>
    <string name="morning">上午:</string>
    <string name="from_to">~</string>
    <string name="success">设置成功</string>

</resources>