<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:clockbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_bar_text_size" />

        <ImageView
            android:id="@+id/imageview_statistics"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:background="@drawable/bg_statistics" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/title_bar"
        android:layout_margin="8dp"
        android:background="@drawable/main_item_bg">

        <TextView
            android:id="@+id/menu1_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/clock_time"
            android:textColor="@color/text_dark_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_below="@+id/menu1_title"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_date"
            android:gravity="center"
            android:textColor="@color/text_dark_color"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_below="@+id/menu1_title"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/date_textview"
            android:background="@drawable/bg_date"
            android:gravity="center"
            android:textColor="@color/text_dark_color"
            android:textSize="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/menu1"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/main_item_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/workState"
            android:textColor="@color/text_dark_color"
            android:textSize="18dp" />

        <RadioGroup
            android:id="@+id/work_type_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/work_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="true"
                android:text="@string/normal"
                android:textColor="@color/text_dark_color"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/work_weekJob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/weekJob"
                android:textColor="@color/text_dark_color"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/work_restAllday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/restAllday"
                android:textColor="@color/text_dark_color"
                android:textSize="14dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/menu2"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/main_item_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/clock_type"
            android:textColor="@color/text_dark_color"
            android:textSize="18dp" />

        <RadioGroup
            android:id="@+id/clock_type_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/clock_type1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="true"
                android:text="@string/clock_in"
                android:textColor="@color/text_dark_color"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/clock_type2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/clock_out"
                android:textColor="@color/text_dark_color"
                android:textSize="14dp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/menu3"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/main_item_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/clock_history"
            android:textColor="@color/text_dark_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/history_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_dark_color"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.ckj.worktime.view.ClockButton
                android:id="@+id/clock_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                clockbutton:radius="48dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>