<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_bg">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/titlebar_text_selector"
                android:textSize="20dp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingTime"
            android:textColor="#000000"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/setting_time_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_time_tip"
            android:textColor="@color/text_dark_color"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_date"
            android:gravity="center"
            android:textColor="@color/text_dark_color"
            android:textSize="16dp" />

        <Button
            android:id="@+id/modify"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/save"
            android:textColor="@color/text_dark_color" />
    </LinearLayout>

</LinearLayout>